--- a/BFRS_API_V1/appsettings.json
+++ b/BFRS_API_V1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LaundryDB": "Server=(local);Database=BFRS_db;Trusted_Connection=True;uid=sa;password=12345"
+  }
 }
