--- a/BFRS_API_V1/appsettings.json
+++ b/BFRS_API_V1/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AppSettings": {
+    "SecretKey": "BirdFarmReproductionSystem_SEP490_ProjectCleanCode"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BFRSDB": "Server=(local);Database=BFRS_db;Trusted_Connection=True;uid=sa;password=123456"
