--- a/BFRS_API_V1/appsettings.json
+++ b/BFRS_API_V1/appsettings.json
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BFRSDB": "Server=(local);Database=BFRS_db;Trusted_Connection=True;uid=sa;password=123456"
+    "BFRSDB": "Server=tcp:bfrsdb.database.windows.net,1433;Initial Catalog=bfrssql;Persist Security Info=False;User ID=bfrssql;Password=Nguyen2401@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
