--- a/BFRS_API_V1/appsettings.json
+++ b/BFRS_API_V1/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BFRSDB": "Server=tcp:bfrsdb.database.windows.net,1433;Initial Catalog=bfrssql;Persist Security Info=False;User ID=bfrssql;Password=Nguyen2401@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "BFRSDB": "Server=tcp:bfrsserver.database.windows.net,1433;Initial Catalog=BFRS_DB;Persist Security Info=False;User ID=bfrsServer;Password=Tiepem123@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"BFRSDB": "Server=WITHNHAN;Initial Catalog=BFRS_db;Persist Security Info=False;User ID=sa;Password=123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
