--- a/BFRS_API_V1/BFRS_API_V1.csproj
+++ b/BFRS_API_V1/BFRS_API_V1.csproj
@@ -26,5 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<InternalsVisibleTo Include="BFRS_BankTests" />
+	</ItemGroup>
 </Project>
